--- a/site.yml
+++ b/site.yml
@@ -24,6 +24,8 @@ site:
                   href: http://github.com/ChicagoPM
                 - title: Talks
                   href: /talks
+                - title: Meeting Notes
+                  href: /notes
                 - title: Jobs
                   href: /jobs
                 - title: About
